# RegionalDSKSFC

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  README.txt  SCENARIO_RUNNER_GUIDE.md  cmake_install.cmake  dsk_SFC  dsk_sfc_flags.h  dsk_sfc_functions.h  dsk_sfc_globalvars.h  dsk_sfc_include.h  dsk_sfc_inits.h  dsk_sfc_inputs.json  dsk_sfc_main.cpp  dsk_sfc_parameters.h  dsk_sfc_regions_input.json  fnModifyInputs.R  index.html  mapper.xlsx  metrics_run_level.csv  regions_input.json  runPar.R  run_scenarios.py  script.js  style.css  verify_regional_emissions.py
assets/: README.txt
auxiliary/: betadev.cpp  betadev.h  bnldev.cpp  bnldev.h  gammln.cpp  gammln.h  gasdev.cpp  gasdev.h  ran1.cpp  ran1.h
inputs/: dsk_sfc_inputs.json
inputs/heterogenous_regions_homogenous_shocks/: scenario2_inputs.json  scenario3_inputs.json  scenario4_inputs.json  scenario5_inputs.json  verification.md
inputs/heterogenous_regions_largemoreexposed/: scenario1_inputs.json  scenario2_inputs.json  scenario3_inputs.json  scenario4_inputs.json  scenario5_inputs.json
inputs/heterogenous_regions_smallmoreexposed/: scenario2_inputs.json  scenario3_inputs.json  scenario4_inputs.json  scenario5_inputs.json
inputs/homogenous_regions_homogenous_shocks/: scenario1_inputs.json  scenario2_inputs.json  scenario3_inputs.json  scenario4_inputs.json  scenario5_inputs.json
inputs/verification/: scenario1_inputs.json  scenario2_inputs.json  scenario3_inputs.json  scenario4_inputs.json  scenario5_inputs.json  scenario6_inputs.json  scenario7_inputs.json  scenario8_inputs.json  scenario9_inputs.json  verification.md
modules/: module_climate_sfc.cpp  module_climate_sfc.h  module_energy_sfc.cpp  module_energy_sfc.h  module_finance_sfc.cpp  module_finance_sfc.h  module_macro_sfc.cpp  module_macro_sfc.h
newmat10/: newmat.h  newmat5.cpp
output/: resultsexp_sprint0_1.txt
scripts/: plot_regional_resultsexp.py  plot_regional_vs_ymc.py  plot_resultsexp.py  plot_ymc.py  run_scenarios.py  verification.py  verify_regional_consumption.py  verify_regional_energy.py
verification/: scenario2_inputs.json  scenario3_inputs.json  scenario4_inputs.json
